# ytdrama

./: .gitignore  README.md  config.toml  logging.toml  pyproject.toml
local/: srsly-2.4.5-cp311-cp311-win_amd64.whl
scripts/: count_words.py  count_words_polars.py  extract_data.py  patterns.py  utils.py  wordcloud.ipynb
ytdrama/: __init__.py  db.py  scratch.py  settings.py  youtube.py
