[tool.poetry]
name = "ytdrama"
version = "0.1.0"
description = ""
authors = ["Br0k3nDesign <adam.j.moran@gmail.com>"]
readme = "README.md"
packages = [{include = "ytdrama"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
google-api-python-client = "^2.77.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
youtube-transcript-api = "^0.5.0"
python-dotenv = "^0.21.1"
sqlalchemy = "^2.0.3"
coloredlogs = "^15.0.1"
pydantic = "^1.10.4"
python-box = "^7.0.0"
pyfunctional = "^1.4.3"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
